--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Hey, I’m Kota and on the web👋</h1>
+    <h1>Hey, I'm Kota and on the web👋</h1>
     <p>DJ • Coffee Nerd • Creative Soul</p>
   </header>
 
