--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
   <header>
+  <nav class="main-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  
     <h1>Hey, I'm Kota and on the web👋</h1>
     <p>DJ • Coffee Nerd • Creative Soul</p>
   </header>
