--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kota</title>
+  <title>About - Kota</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -16,14 +16,27 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    
-    <h1>About</h1>
-    <p>Thoughts on life, music, coffee, and code.</p>
+    <h1>About Me</h1>
+    <p>A little more about the mind behind the mixes, dashboards, and daily grind.</p>
   </header>
 
   <section>
-    <h2>☕ Latest Posts</h2>
-    <p>Coming soon...</p>
+    <h2>🧠 Who I Am</h2>
+    <p>Hey, I'm Kota. I've worked in tech, made lattes for the masses, and now I'm building my digital playground from scratch. I'm part creative, part chaos coordinator. Whether it's designing Notion templates for tattoo artists, spinning house tracks, or cooking up something wild — I like to make stuff that sticks.</p>
   </section>
+
+  <section>
+    <h2>🎧 Where I'm Headed</h2>
+    <p>I'm in the middle of transitioning into a more digital-forward career. That means learning, building, testing — and probably breaking stuff along the way. I'm into remote work, creative tech, music, and making side hustles feel like main quests.</p>
+  </section>
+
+  <section>
+    <h2>🌈 Bonus Fun Facts</h2>
+    <ul>
+      <li>I've stayed up till 2AM mixing house tracks on a tiny controller, chasing the perfect drop — and somehow made it work on spotty Wi-Fi.</li>
+      <li>My shopping sprees usually happen at grocery stores or specialty markets. I get way too excited about sauces and single-origin snacks.</li>
+      <li>My brain runs on Notion dashboards, side hustle ideas, and black sesame syrup — not necessarily in that order.</li>
+    </ul>
+  </section>
+  </html>
 </body>
-</html>
