--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
       </ul>
     </nav>
     <h1>Projects</h1>
-    <p>Thoughts on life, music, coffee, and code.</p>
+    <p>Just a page showing what I'm tinkering with</p>
   </header>
 
   <section>
