Added liquid simulation video

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,17 @@
   </video>
 </section>
 
+ <section class="project-video">
+  <h2>💧 Visual Concept</h2>
+  <p>A looping animation inspired by sound, motion, and minimal design.</p>
+  <video autoplay muted loop playsinline>
+    <source src="media/liquidsimulation.mov.mov" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+</section>
+
+
+
 
   <section>
     <h2>☕ Latest Posts</h2>
