--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   </section>
 
   <section>
-    <h2>🌈 Bonus Fun Facts</h2>
+    <h2>🧐 Bonus Fun Facts</h2>
     <ul>
       <li>I've stayed up till 2AM mixing house tracks on a tiny controller, chasing the perfect drop — and somehow made it work on spotty Wi-Fi.</li>
       <li>My shopping sprees usually happen at grocery stores or specialty markets. I get way too excited about sauces and single-origin snacks.</li>
