Changed emoji in about me

--- a/index.html
+++ b/index.html
@@ -47,5 +47,20 @@
       }
     });
   </script>
+
+
+
+  <!-- === Footer: Copyright Notice === -->
+  <footer>
+    <p id="copyright"></p>
+  </footer>
+
+  <!-- === Script: Auto-Updating Copyright Year === -->
+  <script>
+    const year = new Date().getFullYear();
+    document.getElementById("copyright").innerHTML =
+      `© ${year} Kota Smith — fueled by caffeine & curiosity. All rights reserved.`;
+  </script>
+</body>
 </body>
 </html>
