--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- === Section: Projects === -->
   <section id="projects" class="section">
-    <h1>Projects</h1>
+    <h1 style="color: #F05219;">Projects</h1>
     <p>Just a snippet showing what I'm tinkering with</p>
     
   <!--Section: Project tiles-->
