--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- === Section: Projects === -->
   <section id="projects" class="section">
-    <h1 style="color: #F05219;">Projects</h1>
+    <h2>Projects</h2>
     <p>Just a snippet showing what I'm tinkering with</p>
     
   <!--Section: Project tiles-->
@@ -50,7 +50,7 @@
 
 
   <section>
-    <h2>☕ Latest Posts</h2>
+    <h4>☕ Latest Posts</h4>
     <p>Coming soon...</p>
   </section>
 
@@ -61,9 +61,21 @@
 
   <!-- === Section: About === -->
   <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>I build creative tools and experiences — from festival templates to interactive dashboards.</p>
+    <h2>Who I Am 🤔</h2>
+    <p>Hey, I'm Kota. I've worked in tech, made lattes for the masses, and now I'm building my digital playground from scratch. Part creative, part chaos coordinator. Whether it's building something from scratch, spinning house tracks, or cooking up something wild — I like to make stuff that sticks.</p>
+
+    <h2>Where I'm Headed 🎧</h2>
+    <p>I'm in the middle of transitioning into a more digital-forward career. That means learning, building, testing — and probably breaking stuff along the way. I'm into remote work, creative tech, music, and making side hustles feel like main quests.</p>
+  
+    <h2>Bonus Fun Facts 🪩</h2>
+    <ul>
+      <li>I've stayed up till 2AM mixing house tracks on a tiny controller, chasing the perfect drop — and somehow made it work on spotty Wi-Fi.</li>
+      <li>My shopping sprees usually happen at grocery stores or specialty markets. I get way too excited about sauces and single-origin snacks.</li>
+      <li>My brain runs on Notion dashboards, side hustle ideas, and black sesame syrup — not necessarily in that order.</li>
+    </ul>
   </section>
+
+
 
   <!-- === Section: Contact === -->
   <section id="contact" class="section">
