--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
   <!-- === Section: About === -->
   <section id="about" class="section">
     <h2>Who I Am 🤔</h2>
-    <p>Hey, I'm Kota. I've worked in tech, made lattes for the masses, and now I'm building my digital playground from scratch. Part creative, part chaos coordinator. Whether it's building something from scratch, spinning house tracks, or cooking up something wild — I like to make stuff that sticks.</p>
+    <p>Hey, I'm Kota. I've worked in tech, made shaken espressos for the masses, and now I'm building my digital playground from scratch. Part creative, part chaos coordinator. Whether it's building something from scratch, spinning house tracks, or cooking up something wild — I like to make stuff that sticks.</p>
 
     <h2>Where I'm Headed 🎧</h2>
-    <p>I'm in the middle of transitioning into a more digital-forward career. That means learning, building, testing — and probably breaking stuff along the way. I'm into remote work, creative tech, music, and making side hustles feel like main quests.</p>
+    <p>I'm in the middle of transitioning into a more digital-forward career. That means learning, building, testing — and probably breaking stuff along the way. Like this website. I'm into remote work, creative tech, music, and making side hustles feel like main quests.</p>
   
     <h2>Bonus Fun Facts 🪩</h2>
     <ul>
