Updated product packaging

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
   </video>
 </section>
 
+<section class="project-video">
+  <h3>Product Visual Concept</h3>
+  <p>A looping animation inspired by sound, motion, and minimal design.</p>
+  <video class="project-media" autoplay muted loop playsinline>
+    <source src="media/ProductPackage.mov" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+</section>
+
 
   <section>
     <h4>☕ Latest Posts</h4>
