Added Product reveal vid

--- a/index.html
+++ b/index.html
@@ -49,20 +49,25 @@
 </section>
 
 <section class="project-video">
-  <h3>Product Visual Concept</h3>
+  <h3>📦 Visual Concept</h3>
   <p>A looping animation inspired by sound, motion, and minimal design.</p>
   <video class="project-media" autoplay muted loop playsinline>
     <source src="media/ProductPackage.mov" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
+  <video class="project-media" autoplay muted loop playsinline>
+    <source src="media/ProductReveal.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+
 </section>
 
-
+<!-- You can drop in cards, links, or a grid later
   <section>
     <h4>☕ Latest Posts</h4>
     <p>Coming soon...</p>
   </section>
-
+links, or a grid later -->
  
 
     <!-- You can drop in cards, links, or a grid later -->
